Fix dashboard nav issues with back. Fix spacing around selecter

--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -240,3 +240,7 @@ a:hover {
     width: 100%;
     height: 95%;
 }
+
+.pt-44 {
+    padding-top: 43px;
+}
